--- a/galeria/index.html
+++ b/galeria/index.html
@@ -50,6 +50,7 @@
       <li><a href="../publicidad/index.html" class="hover:underline">Publicidad</a></li>
       <li><a href="../top10/index.html" class="hover:underline">Top 10</a></li>
       <li><a href="../8bits/index.html" class="hover:underline">8 Bits</a></li>
+            <li><a href="../versus/index.html" class="hover:underline font-bold text-pink-400">Then vs Now</a></li>
                 <li><a href="../contacto.html" class="block hover:underline">Contacto</a></li>
 
 
@@ -88,6 +89,8 @@
     <a href="../publicidad/index.html" class="block hover:underline">Publicidad</a>
     <a href="../top10/index.html" class="block hover:underline">Top 10</a>
     <a href="../8bits/index.html" class="block hover:underline">8 Bits</a>
+    <a href="../versus/index.html" class="hover:underline font-bold text-pink-400">Then vs Now</a>
+
         <a href="../contacto/index.html" class="block underline">Contacto</a>
 
 
