--- a/kate/index.html
+++ b/kate/index.html
@@ -13,7 +13,7 @@
 
   <!-- JS Global + Página -->
   <script defer src="../home/js/main.js"></script>
-  <script defer src="../kate/js/songs.js"></script>
+  <script defer src="js/songs.js"></script>
 </head>
 
 <body class="bg-black text-white font-sans">
@@ -54,6 +54,8 @@
       <li><a href="../publicidad/index.html" class="hover:underline">Publicidad</a></li>
       <li><a href="../top10/index.html" class="hover:underline">Top 10</a></li>
       <li><a href="../8bits/index.html" class="hover:underline">8 Bits</a></li>
+            <li><a href="../versus/index.html" class="hover:underline font-bold text-pink-400">Then vs Now</a></li>
+
                 <li><a href="../contacto.html" class="block hover:underline">Contacto</a></li>
 
 
@@ -92,6 +94,8 @@
     <a href="../publicidad/index.html" class="block hover:underline">Publicidad</a>
     <a href="../top10/index.html" class="block hover:underline">Top 10</a>
     <a href="../8bits/index.html" class="block hover:underline">8 Bits</a>
+    <a href="../versus/index.html" class="hover:underline font-bold text-pink-400">Then vs Now</a>
+
         <a href="../contacto/index.html" class="block underline">Contacto</a>
 
 
