--- a/top10/index.html
+++ b/top10/index.html
@@ -46,6 +46,7 @@
       <li><a href="../publicidad/index.html" class="hover:underline">Publicidad</a></li>
       <li><a href="../top10/index.html" class="hover:underline font-bold text-pink-400">Top 10</a></li>
       <li><a href="../8bits/index.html" class="hover:underline">8 Bits</a></li>
+            <li><a href="../versus/index.html" class="hover:underline font-bold text-pink-400">Then vs Now</a></li>
       <li><a href="../contacto.html" class="block hover:underline">Contacto</a></li>
 
     </ul>
@@ -80,6 +81,8 @@
     <a href="../publicidad/index.html" class="block hover:underline">Publicidad</a>
     <a href="../top10/index.html" class="block hover:underline font-bold text-pink-400">Top 10</a>
     <a href="../8bits/index.html" class="block hover:underline">8 Bits</a>
+    <a href="../versus/index.html" class="hover:underline font-bold text-pink-400">Then vs Now</a>
+
     <a href="../contacto.html" class="block hover:underline">Contacto</a>
   </nav>
 </header>
