responsive del inicio

--- a/index.html
+++ b/index.html
@@ -10,23 +10,28 @@
 
 <body class="inicio-screen">
 
-  <!-- BLOQUE ABOUT / INTRO -->
-  <div class="inicio-texto">
-  
+  <!-- CONTENEDOR GENERAL -->
+  <div class="inicio-contenido">
 
-    <p class="inicio-descripcion">
-      Trabajo Final de Malen Ciardullo<br>
-      para la materia de Informática General<br>
-      de la carrera de Artes Multimediales – UNA
-    </p>
+    <!-- BLOQUE ABOUT / INTRO -->
+    <div class="inicio-texto">
+      <p class="inicio-descripcion">
+        Trabajo Final de Malen Ciardullo<br>
+        para la materia de Informática General<br>
+        de la carrera de Artes Multimediales – UNA
+      </p>
+    </div>
+
+    <!-- BOTÓN ENTRAR -->
+    <div class="inicio-boton">
+      <p id="entrar"
+         class="inicio-entrar glitch cursor-pointer"
+         data-text="ENTRAR">
+        ENTRAR
+      </p>
+    </div>
+
   </div>
-
-  <!-- BOTÓN ENTRAR -->
-  <p id="entrar"
-     class="inicio-entrar glitch cursor-pointer"
-     data-text="ENTRAR">
-     ENTRAR
-  </p>
 
   <script src="home/js/entrar.js"></script>
 </body>
