--- a/kate/index.html
+++ b/kate/index.html
@@ -169,6 +169,51 @@
         <button data-version="3" class="versionBtn btn-primary">Cover 3</button>
       </div>
     </section>
+<!-- COMPARACIÓN: ORIGINAL VS COVERS -->
+<section class="neon-box p-6 rounded-xl my-10 max-w-3xl mx-auto space-y-6">
+  <h3 class="text-3xl font-bold neon-title mb-4">Original vs. Reversiones</h3>
+
+  <p class="text-gray-200 leading-relaxed">
+    La versión original de <span class="font-semibold">Kate Bush</span> se construye sobre
+    una base rítmica constante y sintetizadores que transmiten sensación de
+    movimiento continuo. Su voz suena contenida, casi suspendida, como si la
+    canción flotara entre la urgencia y la introspección.
+  </p>
+
+  <div class="space-y-4">
+
+    <p class="text-gray-200 leading-relaxed">
+      <span class="font-semibold text-pink-400">Placebo vs Original:</span><br>
+      Mientras la versión original conserva un tono etéreo y electrónico,
+      Placebo transforma la canción en una pieza más densa y oscura. El pulso se
+      vuelve más pesado y la emocionalidad más directa, pasando de lo introspectivo
+      a lo dramático.
+    </p>
+
+    <p class="text-gray-200 leading-relaxed">
+      <span class="font-semibold text-pink-400">Meg Myers vs Original:</span><br>
+      En comparación con la sutileza de la versión de Kate Bush, la lectura de
+      Meg Myers es más explosiva. La producción es más contemporánea y la voz se
+      presenta más frontal, enfatizando la angustia y la intensidad emocional del
+      mensaje.
+    </p>
+
+    <p class="text-gray-200 leading-relaxed">
+      <span class="font-semibold text-pink-400">Chromatics vs Original:</span><br>
+      Mientras la versión original mantiene una sensación de avance constante, la
+      de Chromatics desacelera el tiempo. El tempo más lento y los sintetizadores
+      envolventes convierten la canción en una experiencia más hipnótica y
+      melancólica.
+    </p>
+
+  </div>
+
+  <p class="text-gray-200 leading-relaxed pt-2">
+    Escuchar estas versiones en conjunto permite percibir cómo una misma estructura
+    musical puede generar emociones completamente distintas según las decisiones
+    estéticas de cada intérprete.
+  </p>
+</section>
 
     <!-- MINI JUEGO -->
     <section class="bg-white/5 p-6 rounded-2xl border border-white/10 space-y-4">
