arreglando entrada al juego por conflicto con el css que obligaba a hacer muchos clicks para poder entrar.

--- a/8bits/index.html
+++ b/8bits/index.html
@@ -65,9 +65,11 @@
   <button id="navToggle" class="md:hidden text-3xl select-none">☰</button>
 
   <!-- NAV MOBILE -->
-  <nav id="navMenu"
-       class="hidden absolute top-full right-4 bg-black border border-white/30 shadow-2xl
-              rounded-2xl p-5 flex-col gap-5 text-xl md:hidden w-56 z-50">
+<nav id="navMenu"
+     class="hidden absolute top-full right-4 bg-black border border-white/30 shadow-2xl
+            rounded-2xl p-5 flex-col gap-5 text-xl md:hidden w-56 z-50">
+
+
 
     <a href="../home/index.html" class="block hover:underline">Home</a>
 
@@ -123,7 +125,7 @@
       <!-- Se llena por JS -->
     </section>
 <!-- JUEGO 8-BIT -->
-<section class="mt-16 p-8 rounded-2xl neon-box">
+<section class="mt-16 p-8 rounded-2xl neon-box relative z-10">
   <h2 class="text-3xl font-bold mb-4">Mini-juego 8-bit</h2>
 
   <p class="opacity-80 mb-6">
@@ -139,10 +141,8 @@
 />
 
 <a href="./game/juego.html"
-   target="_blank"
    class="inline-block bg-purple-600 hover:bg-purple-700 text-white py-3 px-6 rounded-xl text-lg font-bold transition">
-   🎮 JUGAR AHORA
-</a>
+   🎮 JUGAR AHORA </a>
 </section>
 
   <!-- FOOTER -->
