arreglando un ode los videos de mj que habían bajado

--- a/michael/index.html
+++ b/michael/index.html
@@ -156,13 +156,13 @@
       <p class="font-semibold text-lg">Cover – Alien Ant Farm</p>
     </a>
 
-    <a href="https://www.youtube.com/watch?v=0HsTVAcbupo" target="_blank"
-       class="bg-white/10 p-4 rounded-xl shadow-lg hover:scale-105 transition block">
-      <img src="https://img.youtube.com/vi/0HsTVAcbupo/hqdefault.jpg"
-           alt="Glee Cast Cover"
-           class="rounded-lg w-full object-cover mb-3 h-64 sm:h-72 lg:h-80">
-      <p class="font-semibold text-lg">Cover – Glee Cast</p>
-    </a>
+  <a href="https://youtu.be/kZyLmn2moMM?si=276IGQ2UtAORZkcz" target="_blank"
+   class="bg-white/10 p-4 rounded-xl shadow-lg hover:scale-105 transition block">
+  <img src="https://img.youtube.com/vi/kZyLmn2moMM/0.jpg"
+       alt="Glee Cast Cover"
+       class="rounded-lg w-full object-cover mb-3 h-64 sm:h-72 lg:h-80">
+  <p class="font-semibold text-lg">Cover – Glee Cast</p>
+</a>
 
     <a href="https://www.youtube.com/watch?v=uT3SBzmDxGk" target="_blank"
        class="bg-white/10 p-4 rounded-xl shadow-lg hover:scale-105 transition block">
